[package]
name = "unique-uuid-derive"
version = "0.1.0"
authors = ["Guillaume Boyé <guillaume.boye@epfl.ch>"]
edition = "2021"
license = "MIT"
description = "A library to generate unique UUIDs."
repository = "https://github.com/BoyeGuillaume/rust-unique-uuid/tree/master"
keywords = ["uuid", "compile-time"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
uuid = { version = "*", features = ["serde", "v4"] }
syn = "2.0.96"
quote = "1.0.9"
serde = { version = "~1", features = ["derive"] }
toml = ">=0.7"
